data, user events: by user